Fixed the alignment of version for mobile
Fixed the alignment of version for mobile

--- a/public/assets/css/ci-responsive.css
+++ b/public/assets/css/ci-responsive.css
@@ -499,8 +499,8 @@ section#spotlight-outer{
 	width: 50px;
 	height: 50px;
 	position: absolute;
-	top: 0px;
-	right: 0;
+	top: -5px;
+        right: -15px;
 	font-size: 2rem;
 	color: var(--primary-color);
 	text-align: center;
